test-cases/negative/test_160_undefined_type_in_declaration.lay
# negative test: using undefined type in variable declaration
# expected: type checker should catch this

the variable x of type UndefinedType is 5


